# starting-ragchatbot-codebase

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  TEST_FEATURE.md  pyproject.toml
.github/workflows/: claude-code-quality.yml  claude-pr-review.yml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  utils.py
backend/tests/: TEST_RESULTS_AND_FIXES.md  __init__.py  conftest.py  test_ai_generator_tool_calling.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system_integration.py  test_vector_store.py
frontend/: index.html  script.js  style.css
